Refactor from SonarQube, script for database updated, readme